Spacing fix between radio button and text

--- a/packages/botpress-api.ai/src/views/style.scss
+++ b/packages/botpress-api.ai/src/views/style.scss
@@ -14,6 +14,7 @@
   .radioText {
     vertical-align: middle;
     font-weight: 300;
+    padding-left: 3px;
   }
 
   .settings {
